syntax = "proto3";

package hypertube.profile;

message Empty {}

message EditRequest {
  string first_name = 1;
  string last_name = 2;
}

message ProfileRequest {
  string id = 1;
}

message MyProfileResponse {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string avatar = 4;
  bool inited = 5;
}

message ProfileResponse {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string avatar = 4;
}

service ProfileService {   
  // Retrieve current user profile
  rpc MyProfile(Empty) returns (MyProfileResponse);
  
  // Retrieve profile by id
  rpc Profile(ProfileRequest) returns (ProfileResponse);

  // Edit profile of the current user
  rpc Edit(EditRequest) returns (ProfileResponse);
}

message UpdateAvatarRequest {
  string id = 1;
  string avatar = 2;
}

message AuthCreateProfileRequest {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string avatar = 4;
}

service InternalProfileService {
  // called by AvatarService when avatar upload succeed
  rpc UpdateAvatar(UpdateAvatarRequest) returns (Empty);

  // called by AuthService when user create an account
  rpc AuthCreateProfile(AuthCreateProfileRequest) returns (Empty);
}
